# CAL

./: .gitignore  README.md
cal_fp01_CLion/Tests/: Change.cpp  Factorial.cpp
cal_fp02_CLion/Tests/: Labirinth.cpp  Sudoku.cpp  Sudoku.h  tests.cpp
cal_fp03_CLion/Tests/: NearestPoints.cpp  tests.cpp
cal_fp06_CLion/: FichaJUNG.cpp
proj/: CMakeLists.txt  README.txt  main.cpp
proj/files/aveiro/: aveiro_info.txt  teste.txt
proj/files/braga/: braga_info.txt
proj/files/coimbra/: coimbra_info.txt
proj/files/ermesinde/: ermesinde_info.txt
proj/files/fafe/: fafe_info.txt
proj/files/gondomar/: gondomar_info.txt  teste.txt
proj/files/lisboa/: lisboa_info.txt
proj/files/maia/: maia_info.txt
proj/files/porto/: porto_info.txt
proj/files/viseu/: viseu_info.txt
